--- a/mlm-web/assets/css/tailwind.css
+++ b/mlm-web/assets/css/tailwind.css
@@ -12,11 +12,11 @@
   label {
     @apply block text-sm mb-2;
   }
-  input {
+  input, select {
     @apply border rounded bg-gray-50 px-2 py-1 text-gray-500;
   }
   button {
-    @apply border rounded text-sm text-white shadow px-2 py-2;
+    @apply border rounded text-sm text-white shadow px-2 py-1;
   }
 }
 
@@ -43,5 +43,13 @@
 
   .infos-block {
     @apply border-green-700 p-3 rounded border-l-4 bg-green-500 text-white text-sm;
+  }
+
+  .tag {
+    @apply border p-1 text-white text-xs rounded;
+  }
+
+  .tag-primary {
+    @apply border-green-500 bg-green-500;
   }
 }
